# pdf-email-optimizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  SKILL.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  fixture-submission.yml
.github/workflows/: ci.yml  publish.yaml
agents/: openai.yaml
benchmarks/: benchmark_manifest.yaml  convert_samples.py  make_charts.py  make_demo_brochures.py  make_demo_gallery.py  make_fixtures.py  make_gallery.py  run_benchmarks.py  run_comparisons.py  run_samples.py
benchmarks/corpus/: README.md  corpus.yaml
benchmarks/corpus/private/: README.md
benchmarks/corpus/public/: README.md
benchmarks/demo_assets/: PROVENANCE.md
benchmarks/fixtures/: README.md
benchmarks/results/: README.md  comparisons.json  latest.csv  latest.json  latest.md  samples.json
docs/: agent-usage.md  benchmarking.md  comparisons.md  compatibility.md  discussions-pinned-post.md  examples.md  field-validation.md  installation.md  json-output.md  known-limitations.md  roadmap-validation-sprint.md  sample-provenance.md  troubleshooting.md
docs/gallery/: demo_gallery.json  gallery.json
examples/agent-transcripts/: aggressive.md  audit.md  quality-target.md  range.md  visual-compare.md
schema/: output-summary.schema.json
scripts/: compare_pdf_render.py  optimize_pdf_email.py
src/pdf_email_optimizer/: __init__.py  __main__.py  bilevel.py  candidates.py  cli.py  config.py  errors.py  ghostscript.py  images.py  input_source.py  office_convert.py  optimizer.py  pdf_inspect.py  pikepdf_backend.py  pipeline.py  profiles.py  render_qa.py  reporting.py  targets.py  utils.py
tests/: conftest.py  test_bilevel.py  test_integration.py  test_office_convert.py  test_optimizer.py  test_render_qa.py  test_targets.py
tests/fixtures/: README.md
